# bone-bot

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  base-config.toml  vcpkg.json
src/: insults.cpp  insults.h  main.cpp  project.h.in  teams.cpp  teams.h  tests.cpp  users.cpp  users.h
susser/: sus.py
